# model-verify

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  README_EN.md  main.py  pyproject.toml  requirements.txt
analysis/: __init__.py  mmd_test.py  report.py  scoring.py
config/: __init__.py  models.yaml  providers.example.yaml  providers.yaml
probes/: __init__.py  base.py  benchmark.py  comparison.py  fingerprint.py  identity.py  latency.py  logprob.py  tier_signature.py
tests/: __init__.py  test_core.py
utils/: __init__.py  api_client.py  config_loader.py  data_store.py  logging.py  types.py
